# money

./: .gitignore  README.md  config.txt  money.conf  pyproject.toml  seed.txt
money/: main.py
money/constants/: schema.py  schema_def.py  template.py  var.py
money/helper/: __init__.py  app.py  event.py  note.py  report.py
money/notes/: __init__.py  local.py  notesnook.py  parser.py
money/prototype/: __init__.py  app.py  event.py  helper.py  liquidity.py  note.py  report.py
