[tool.poetry]
name = "money"
version = "0.1.0"
description = "Money management application"
authors = ["Vu Xuan Bac <vuxuanbac712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cmdapp = {path = "../cmdapp", develop = true}
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
